--- a/index.html
+++ b/index.html
@@ -33,7 +33,49 @@ footer{text-align:center;padding:20px;background:#f4f4f4;border-top:2px solid #d
 
 <!-- PAGE CONTENT STARTS HERE -->
 <main>
+<h1>Askern Handyman Services</h1>
 
+<section id="about">
+<h2>About Us</h2>
+<p>Welcome to Askern Handyman Services! We are your trusted local experts for all external home repairs, external decorating, and fencing solutions within a 7-mile radius of Askern. Whether you need minor repairs, large-scale projects, or professional maintenance, we provide reliable, professional, and high-quality services to enhance and protect the exterior of your home.</p>
+<p>Our team understands that the exterior of your home is not just the first thing people see—it’s also essential for safety, durability, and curb appeal. That’s why we use skilled workmanship and quality materials to ensure every job is done right the first time. No project is too big or too small, and we take pride in helping homeowners in Askern maintain and improve their properties with care and professionalism.</p>
+<p>We have years of experience in the handyman industry and specialize in external services. Our approach is practical, efficient, and tailored to your needs, making us a go-to choice for homeowners looking for dependable local expertise. Every client receives a personalised service, ensuring that your specific requirements are understood and met with precision.</p>
+</section>
+
+<section id="services">
+<h2>Our Services</h2>
+<p>We offer a wide range of external home services in Askern and the surrounding areas within a 7-mile radius, including:</p>
+<ul>
+<li><strong>External Home Repairs:</strong> From fixing gutters, fences, doors, and windows to repairing external walls and pathways, we ensure your home stays safe, functional, and visually appealing.</li>
+<li><strong>External Decorating:</strong> Freshen up your home’s exterior with professional painting and decorating. We handle walls, fences, gates, and other surfaces to give your property a polished, updated look.</li>
+<li><strong>Fencing:</strong> Installation, repair, and maintenance of all types of fences to protect your property and improve its aesthetics. We provide timber, panel, and bespoke fencing solutions tailored to your needs.</li>
+</ul>
+<p>We pride ourselves on reliability, professionalism, and attention to detail. Every project is completed to the highest standard, ensuring long-lasting results that you can be proud of. Our services are flexible and affordable, allowing homeowners to maintain their properties without hassle or compromise.</p>
+</section>
+
+<section id="why-choose-us">
+<h2>Why Choose Askern Handyman Services?</h2>
+<p>Choosing the right handyman is crucial for maintaining and improving your home. Here’s why homeowners in Askern trust us:</p>
+<ul>
+<li><strong>Local Expertise:</strong> Serving Askern and a 7-mile radius, we understand the specific needs of homes in the area.</li>
+<li><strong>Professionalism:</strong> We arrive on time, communicate clearly, and treat every property with respect.</li>
+<li><strong>Quality Work:</strong> We use high-quality materials and ensure meticulous workmanship on every project.</li>
+<li><strong>Versatility:</strong> From minor repairs to major fencing installations, we handle it all.</li>
+<li><strong>Customer Satisfaction:</strong> Our work isn’t done until you are fully happy with the results.</li>
+</ul>
+<p>By choosing Askern Handyman Services, you are choosing peace of mind. Every job is approached with care, professionalism, and a commitment to exceeding expectations. We listen carefully to your needs, provide clear advice, and deliver solutions that enhance the value and appearance of your home.</p>
+</section>
+
+<section id="contact">
+<h2>Contact Us</h2>
+<p>If you need a reliable handyman for external home repairs, decorating, or fencing in Askern or within a 7-mile radius, get in touch today!</p>
+<div class="contact-info" style="background-color:#e9f0f5; padding:15px; margin-top:20px; border-left:4px solid #2e3d49;">
+<p><strong>Phone:</strong> 01234 567890</p>
+<p><strong>Email:</strong> info@askernhandyman.co.uk</p>
+<p><strong>Location:</strong> Askern, Doncaster, South Yorkshire</p>
+</div>
+<p>We provide free quotes and honest advice for all projects. Let us help you enhance your home’s exterior today with quality workmanship and professional service you can trust.</p>
+</section>
 </main>
 <!-- PAGE CONTENT ENDS HERE -->
 
