--- a/index.html
+++ b/index.html
@@ -1,1 +1,235 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Gutter Replacement, Cleaning & Clearing in Askern DN6 | Home Repairs</title>
 
+<!-- SEO Meta Tags -->
+<meta name="description" content="Professional gutter replacement, cleaning, and clearing services in Askern DN6 and surrounding villages including Norton, Campsall, Skellow, Woodlands, Owston, Wadworth, Brodsworth, Bessacarr, Adwick le Street, Conisbrough, and Mexborough. Protect your home from water damage with our expert team.">
+<meta name="keywords" content="Gutter cleaning Askern DN6, Gutter replacement Askern, Downspout clearing Askern, Roof gutter maintenance Askern villages, Residential gutter services DN6, Gutter repair near Askern, Village gutter services Askern">
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph / Social Sharing -->
+<meta property="og:title" content="Gutter Replacement, Cleaning & Clearing in Askern DN6">
+<meta property="og:description" content="Expert gutter services for all villages and towns within a 10-mile radius of Askern DN6 including Norton, Campsall, Skellow, Woodlands, Owston, Wadworth, Brodsworth, Bessacarr, Adwick le Street, Conisbrough, and Mexborough.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://steely1968.github.io/">
+<meta property="og:image" content="https://steely1968.github.io/images/logo.webp">
+
+<!-- Local Business Schema -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://steely1968.github.io/images/logo.webp",
+"url": "https://steely1968.github.io",
+"telephone": "07735873694",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "Your Street Address",
+"addressLocality": "Askern",
+"postalCode": "DN6",
+"addressCountry": "GB"
+},
+"areaServed": {
+"@type": "GeoCircle",
+"geoMidpoint": {
+"@type": "GeoCoordinates",
+"latitude": 53.5722,
+"longitude": -1.1470
+},
+"geoRadius": 16
+},
+"priceRange": "££",
+"description": "Professional gutter replacement, cleaning, and clearing services across Askern DN6 and surrounding villages.",
+"sameAs": [
+"https://www.facebook.com/yourprofile",
+"https://www.twitter.com/yourprofile"
+],
+"openingHours": "Mo,Tu,We,Th,Fr 08:00-18:00",
+"currenciesAccepted": "GBP",
+"paymentAccepted": "Cash, Credit Card"
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "Do you provide gutter services in all villages around Askern DN6?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, we provide gutter replacement, cleaning, and clearing services in Askern DN6 and surrounding villages including Norton, Campsall, Skellow, Woodlands, Owston, Wadworth, Brodsworth, Bessacarr, Adwick le Street, Conisbrough, and Mexborough."
+}
+},
+{
+"@type": "Question",
+"name": "How often should gutters be cleaned in Askern DN6?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We recommend cleaning gutters at least twice a year: in spring to remove winter debris and in autumn to prevent leaf blockages. More frequent cleaning may be needed if you have large trees nearby."
+}
+},
+{
+"@type": "Question",
+"name": "Do you replace damaged gutters or only clean them?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We provide both services. Our team can clean, clear, repair, or completely replace damaged gutters with high-quality materials including aluminium, UPVC, galvanized steel, and copper."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer gutter services for both homes and commercial properties?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, we serve residential and commercial properties in Askern DN6 and surrounding areas, offering tailored solutions for each property type."
+}
+},
+{
+"@type": "Question",
+"name": "How can I book gutter cleaning or replacement services?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "You can easily book our services by calling us directly at 07735873694. We also provide free consultations and tailored quotes for your property."
+}
+}
+]
+}
+</script>
+
+<style>
+body {
+font-family: Arial, sans-serif;
+line-height: 1.6;
+margin: 0;
+padding: 20px;
+background-color: #f4f4f4;
+color: #333;
+}
+.container {
+max-width: 900px;
+margin: auto;
+background: #fff;
+padding: 30px;
+box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+.logo {
+display: block;
+margin: 0 auto 20px auto;
+max-height: 90px;
+width: auto;
+}
+h1 {
+text-align: center;
+color: #2c3e50;
+}
+h2 {
+color: #34495e;
+}
+p {
+margin-bottom: 15px;
+}
+ul {
+margin-bottom: 15px;
+}
+.cta {
+text-align: center;
+margin-top: 30px;
+}
+.cta a {
+display: inline-block;
+padding: 15px 25px;
+background-color: #27ae60;
+color: #fff;
+text-decoration: none;
+font-size: 18px;
+border-radius: 5px;
+}
+.cta a:hover {
+background-color: #2ecc71;
+}
+.faq-section {
+margin-top: 40px;
+}
+.faq-section h2 {
+text-align: center;
+margin-bottom: 20px;
+}
+.faq-section dl dt {
+font-weight: bold;
+margin-top: 15px;
+}
+.faq-section dl dd {
+margin-left: 20px;
+margin-bottom: 15px;
+}
+</style>
+</head>
+<body>
+<div class="container">
+<img src="images/logo.webp" alt="Company Logo" class="logo">
+
+<h1>Gutter Replacement, Cleaning & Clearing in Askern DN6</h1>
+
+<p>Protect your home with professional gutter services across Askern DN6 and surrounding villages, including <strong>Norton, Campsall, Skellow, Woodlands, Owston, Wadworth, Brodsworth, Bessacarr, Adwick le Street, Conisbrough, and Mexborough</strong>. Maintaining clean and functional gutters is essential to prevent water damage, structural problems, and foundation issues. Our expert team provides comprehensive gutter replacement, cleaning, and clearing services to keep your home safe and dry.</p>
+
+<h2>Gutter Replacement Services</h2>
+<p>Old or damaged gutters can lead to leaks, overflowing water, and serious damage to your home. Our gutter replacement services provide a long-lasting solution. We install and replace gutters in a variety of materials, including aluminium, galvanized steel, UPVC, and copper. Our service covers all towns and villages in the Askern DN6 area.</p>
+
+<h2>Gutter Cleaning Services</h2>
+<p>Regular cleaning is key to preventing blockages, overflow, and damage. We remove leaves, moss, dirt, and debris from gutters and downspouts, ensuring proper water flow. Our service extends to villages such as <strong>Norton, Campsall, Skellow, Woodlands, and Owston</strong>.</p>
+
+<h2>Gutter Clearing Services</h2>
+<p>Severe blockages or damaged gutters require more than routine cleaning. We address tree root intrusion, moss buildup, sagging gutters, slow drainage, and blocked downspouts. Preventative solutions like gutter guards are also provided.</p>
+
+<h2>Why Choose Our Gutter Services?</h2>
+<ul>
+<li><strong>Experience:</strong> Years of expertise in gutter replacement, cleaning, and clearing.</li>
+<li><strong>Safety:</strong> Professional equipment for safe access to all gutters.</li>
+<li><strong>Reliability:</strong> Timely, quality-focused service.</li>
+<li><strong>Comprehensive Solutions:</strong> From minor cleaning to full replacement.</li>
+<li><strong>Affordable Pricing:</strong> Transparent and competitive.</li>
+</ul>
+
+<h2>Year-Round Gutter Maintenance</h2>
+<ul>
+<li>Spring cleaning to remove winter debris</li>
+<li>Summer inspections after storms</li>
+<li>Autumn clearing to prevent leaf buildup</li>
+<li>Winter preparation to avoid ice dams and frozen blockages</li>
+</ul>
+
+<!-- FAQ Section -->
+<div class="faq-section">
+<h2>Frequently Asked Questions</h2>
+<dl>
+<dt>Do you provide gutter services in all villages around Askern DN6?</dt>
+<dd>Yes, we provide gutter replacement, cleaning, and clearing services in Askern DN6 and surrounding villages including Norton, Campsall, Skellow, Woodlands, Owston, Wadworth, Brodsworth, Bessacarr, Adwick le Street, Conisbrough, and Mexborough.</dd>
+
+<dt>How often should gutters be cleaned in Askern DN6?</dt>
+<dd>We recommend cleaning gutters at least twice a year: in spring to remove winter debris and in autumn to prevent leaf blockages. More frequent cleaning may be needed if you have large trees nearby.</dd>
+
+<dt>Do you replace damaged gutters or only clean them?</dt>
+<dd>We provide both services. Our team can clean, clear, repair, or completely replace damaged gutters with high-quality materials including aluminium, UPVC, galvanized steel, and copper.</dd>
+
+<dt>Do you offer gutter services for both homes and commercial properties?</dt>
+<dd>Yes, we serve residential and commercial properties in Askern DN6 and surrounding areas, offering tailored solutions for each property type.</dd>
+
+<dt>How can I book gutter cleaning or replacement services?</dt>
+<dd>You can easily book our services by calling us directly at 07735873694. We also provide free consultations and tailored quotes for your property.</dd>
+</dl>
+</div>
+
+<div class="cta">
+<a href="tel:07735873694">Call Now to Book Your Service</a>
+</div>
+</div>
+</body>
+</html>
